Chrome glitch fixed + chrome horizontal scroll bar fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,12 +1,14 @@
 * {
     box-sizing: border-box;
     padding: 0;
+    margin: 0;
 }
 
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     background-color: #fff;
+    margin: 0;
 }
 
 header {
@@ -74,7 +76,7 @@ p {
 
 #splash {
     margin: 0 auto;
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     background-color: #089296;
     background-size: cover;
